--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
 
-    <h1>Extrato</h1>
+    <h1 class="extra">Extrato</h1>
 
-    <input type="text" id="inserir"> 
+    <h1 class="valores">Valor Feito no dia</h1>
+    <input type="text" id="inserir">
+    <br><br>
+    <h1 class="valores">Valor Total do caixa</h1>
+    <input type="number" id="total"> 
     
 
     <div id="inp" contenteditable="false">
+
+
 
     </div>
 
